# astrotiger

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  commit.sh
astrotiger/: boxes.hpp  channel.hpp  chemistry.hpp  cosmos.hpp  defs.hpp  fileio.hpp  geometry.hpp  gravity.hpp  grid.hpp  hpx.hpp  hydro_flux.hpp  hydro_grid.hpp  levels.hpp  multi_array.hpp  options.hpp  output.hpp  particles.hpp  polytrope.hpp  rand.hpp  range.hpp  tree.hpp  tree_client.hpp  vect.hpp
hpx_lite/hpx/: hpx_lite.hpp  id_type.hpp  serialize.hpp
hpx_lite/hpx/detail/: id_type_impl.hpp
include/: Analysis.hpp  AutoDiff.hpp  Basis.hpp  BellPolynomial.hpp  Combinatorics.hpp  Constants.hpp  ContainerArithmetic.hpp  Definitions.hpp  DifferentialPolynomial.hpp  DoubleReal.hpp  Euler.hpp  EulerState.hpp  FwdAutoDiff.hpp  Hdf5.hpp  HyperGrid.hpp  Indent.hpp  Integrate.hpp  Matrix.hpp  MultiIndex.hpp  MultiPrecision.hpp  Multidices.hpp  Permutation.hpp  Polynomial.hpp  Quadrature.hpp  Radiation.hpp  Rational.hpp  Real.hpp  Simd.hpp  SquareMatrix.hpp  SymmetricGroup.hpp  Tensor.hpp  TrialSpace.hpp  Triangular.hpp  Units.hpp  Util.hpp  Valarray.hpp  autodiff.hpp  cgs.hpp  conserved.hpp  constants.hpp  (+34 more)
include/numbers/: autodiff.hpp  rational.hpp
include/units/: cgs.hpp  quantity.hpp  units.hpp
repo/: Util.hpp
src/: DG.cpp  FermiDirac.cpp  HyperGrid.cpp  Quadrature.cpp  Radiation.cpp  TrialSpace.cpp  Util.cpp  boxes.cpp  chemistry.cpp  codegen.cpp  cosmos.cpp  fileio.cpp  fpe.cpp  geometry.cpp  gravity.cpp  hpx.cpp  hydro_grid.cpp  io.cpp  levels.cpp  main.cpp  opacity.cpp  options.cpp  output.cpp  particles.cpp  polytrope.cpp  rand.cpp  tree.cpp  tree_client.cpp
tests/: test_autodiff.cpp  test_con2prim.cpp  test_implicit_radiation.cpp  test_matrix.cpp  test_radiation_eigensystem.cpp  test_srhd_eigensystem.cpp
